--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
   <body>
     <main id="main-doc">
       <h1>Hello World, we are software developers!</h1>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-
+      <section class="main-section" id="Introduction">
+        <header>Introduction</header>
+      </section>
+      <section class="main-section" id="What_you_should_already_know">
+        <header>What you should already know</header>
+      </section>
+      <section class="main-section" id="Javascript_and_Java">
+        <header>JavaScript and Java</header>
+      </section>
+      <section class="main-section" id="Hello_world">
+        <header>Hello world</header>
+      </section>
+      <section class="main-section" id="Variables">
+        <header>Variables</header>
+      </section>
     </main>
-    
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
