--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <nav id="navbar">
       <header>JS Documentation</header>
       <a href="#Introduction" class="nav-link">Introduction</a>
-      <a href="#What you should already know" class="nav-link"
-        >What you should already know</a
-      >
+      <a href="#What you should already know" class="nav-link">What you should already know</a>
       <a href="#JavaScript and Java" class="nav-link">JavaScript and Java</a>
       <a href="#Hello world" class="nav-link">Hello world</a>
       <a href="#Variables" class="nav-link">Variables</a>
@@ -43,8 +41,8 @@
               elements on an HTML form and respond to user events such as mouse
               clicks, form input, and page navigation.
             </p>
-          </li>
-          <li>
+         </li>
+         <li>
             <p>
               Server-side JavaScript extends the core language by supplying
               objects relevant to running JavaScript on a server. For example,
@@ -81,7 +79,7 @@
           </li>
         </ul>
       </section>
-      <section class="main-section" id="Javascript_and_Java">
+      <section class="main-section" id="JavaScript_and_Java">
         <header>JavaScript and Java</header>
         <p>
           JavaScript and Java are similar in some ways but fundamentally
