--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav id="navbar">
       <header>JS Documentation</header>
       <a href="#Introduction" class="nav-link">Introduction</a>
-      <a href="#What you should already know" class="nav-link">What you should already know</a>
-      <a href="#JavaScript and Java" class="nav-link">JavaScript and Java</a>
-      <a href="#Hello world" class="nav-link">Hello world</a>
+      <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
+      <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+      <a href="#Hello_world" class="nav-link">Hello world</a>
       <a href="#Variables" class="nav-link">Variables</a>
     </nav>
     <main id="main-doc">
