end of the challenge from 13 to 15

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body class="container">
     <nav id="navbar">
       <header>JS Documentation</header>
-      <a href="#Introduction" class="nav-link">Introduction</a>
-      <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
-      <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
-      <a href="#Hello_world" class="nav-link">Hello world</a>
-      <a href="#Variables" class="nav-link">Variables</a>
+      <a href="#Introduction" class="nav-link">Introduction</a><br>
+      <a href="#What_you_should_already_know" class="nav-link">What you should already know</a><br>
+      <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a><br>
+      <a href="#Hello_world" class="nav-link">Hello world</a><br>
+      <a href="#Variables" class="nav-link">Variables</a><br>
     </nav>
     <main id="main-doc">
       <h1>Hello World, we are software developers!</h1>
@@ -147,7 +147,7 @@
         </p>
       </section>
     </main>
-
+    <footer></footer>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
   </body>
